# md2pdf

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  TESTING.md  config_loader.py  coverage.json  docker-compose.yml  document_builder.py  install.sh  markdown_renderer.py  md2pdf.config.yaml  md2pdf.py  md2pdf_batch.py  package-lock.json  package.json  pyproject.toml  renderer_client.py  requirements.txt  test1.md  test2.md  theme_manager.py
.claude/: settings.local.json
.claude/commands/: gemini-review.md  md2pdf.md
docs/: RENDERER_FAILURE_LOG.md
docs/plans/: 2025-01-13-complete-interactive-cli.md  2025-12-01-md2pdf-skill-design.md  2025-12-01-md2pdf-skill-implementation.md
gemini_decisions/: README-gemini-recommendations.md  analyze_gemini_recommendations.py  capture_gemini_recommendations.py  disposition_gemini_recommendations.py  pr33-decisions.json  pr34-40-decisions.json  pr36-decisions.json  pr36-gemini-comments.json  record_gemini_decisions.py
renderer/: package-lock.json  package.json  server.js  test_server.sh
scripts/: analyze_gemini_recommendations.py  record_gemini_decisions.py
templates/: base.html
tests/: test_cli.py  test_config_loader.py  test_document_builder.py  test_markdown_renderer.py  test_md2pdf_batch.py  test_renderer_client.py  test_theme_manager.py
themes/: academic.css  clinical.css  journal.css  minimal.css  modern.css  presentation.css
