[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md2pdf"
version = "0.1.0"
description = "Convert Markdown to PDF/HTML using Puppeteer-based rendering service"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Academic Workspace", email = "noreply@example.com"}
]
keywords = ["markdown", "pdf", "html", "converter", "puppeteer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Topic :: Text Processing :: Markup",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "markdown-it-py>=3.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
md2pdf = "md2pdf:main"

[tool.setuptools]
py-modules = ["md2pdf", "config_loader", "markdown_renderer", "document_builder", "theme_manager", "renderer_client"]

[project.urls]
Repository = "https://github.com/Neikan-BSN/academic-workspace"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --strict-markers"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP"]
